<resources>
    <string name="app_name">Mimi</string>
    <string name="prueba">PruebaAndroid</string>
    <string name="btnSaludar">Saluda</string>
    <string name="btnmapa">Ir a mapa</string>
    <string name="btnVolver">Volver</string>
    <string name="btnSalir">Salir</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnjuego">Juego de Colores</string>
    <string name="btndados">Juego de Numeros</string>
    <string name="btnvocales">Juego de Vocales</string>
    <string name="btncerrar">Cerrar APP</string>
    <string name="txtpurple">¿Cual es el color Morado?</string>
    <string name="txtred">¿Cual es el color Rojo?</string>
    <string name="txtgray">¿Cual es el color Gris?</string>
    <string name="txtorange">¿Cual es el color Naranjo?</string>
    <string name="txtblue">¿Cual es el color Azul?</string>
    <string name="txtblack">¿Cual es el color Negro?</string>
    <string name="txt1"><b>"1"</b></string>
    <string name="txt2"><b>"2"</b></string>
    <string name="txt3"><b>"3"</b></string>
    <string name="txt4"><b>"4"</b></string>
    <string name="txt5"><b>"5"</b></string>
    <string name="txt6"><b>"6"</b></string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="txtletra_a">¿Cual es la letra A?</string>
    <string name="txtletra_e">¿Cual es la letra E?</string>
    <string name="txtletra_i">¿Cual es la letra I?</string>
    <string name="txtletra_o">¿Cual es la letra O?</string>
    <string name="txtletra_u">¿Cual es la letra U?</string>

</resources>
