<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5">
    tools:context=".Number1">


    <ImageView
        android:id="@+id/imageDado2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/button2"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        app:srcCompat="@drawable/d2"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="onClick"
        android:text="@string/txt2"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button2"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="onClick"
        android:text="@string/txt5"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="onClick"
        android:text="@string/txt3"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="onClick"
        android:text="@string/txt6"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_toLeftOf="@id/button2"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="onClick"
        android:text="@string/txt1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/button5"
        android:layout_toLeftOf="@id/button5"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="onClick"
        android:text="@string/txt4"
        android:textSize="24sp"
        android:textStyle="bold" />



</RelativeLayout>

