<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    


     <EditText
        android:id="@+id/txtingresa"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_margin="10dp"/>


     <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaludar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="145dp"
        tools:ignore="MissingConstraints" />


     <TextView
        android:id="@+id/tvmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:padding="14dp"
        android:text="@string/prueba" android:textSize="20dp"
        android:textColorHighlight="@color/colorPrimary" />

     <Button
        android:id="@+id/btnjuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnjuego"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="145dp"
        tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

