<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo2"
    tools:context=".Home">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:text="¿Juegos?"
            android:layout_alignParentTop="true"
            android:shape="rectangle"
            android:textAppearance="@style/Base.Theme.AppCompat.Light.DarkActionBar"/>


        <Button
            android:id="@+id/btntoast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="prueba toast"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorPrimary"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="145dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnjuego"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_colores"
            android:text="@string/btnjuego"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="145dp" />

        <Button
            android:id="@+id/btndados"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_dados"
            android:text="@string/btndados"
            android:textColor="@color/colorPrimary"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="145dp" />

        <Button
            android:id="@+id/btnvocales"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="JUEGO DE LETRAS"
            android:textColor="@color/colorPrimary"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="145dp" />

        <Button
            android:id="@+id/btnsql"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SQL"
            android:textColor="@color/colorPrimary"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="145dp" />

        <Button
            android:id="@+id/btncerrar"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_margin="5dp"
            android:text="@string/btncerrar" />


    </LinearLayout>



</RelativeLayout>



